# beeper-desktop-api

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: fetch_accounts.rs  fetch_chats.rs  fetch_messages.rs  focus_app.rs  search.rs  send_message.rs
src/: error.rs  lib.rs
src/client/: accounts.rs  app.rs  chats.rs  messages.rs  mod.rs  search.rs  utils.rs
src/models/: app.rs  chat.rs  common.rs  message.rs  mod.rs  user.rs
tests/: accounts.rs  app.rs  chats.rs  integration_tests.rs  messages.rs
tests/common/: mod.rs
