[package]
name = "beeper-desktop-api"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Rust API wrapper for Beeper Desktop API"
repository = "https://github.com/ErdemGKSL/beeper-desktop-api"
authors = ["Erdem Göksel"]
keywords = ["beeper", "messaging", "chat", "api-wrapper", "async"]
categories = ["api-bindings", "authentication"]
readme = "README.md"

[lib]
name = "beeper_desktop_api"
path = "src/lib.rs"

[[example]]
name = "fetch_chats"
path = "examples/fetch_chats.rs"

[[example]]
name = "fetch_messages"
path = "examples/fetch_messages.rs"

[[example]]
name = "fetch_accounts"
path = "examples/fetch_accounts.rs"


[[example]]
name = "send_message"
path = "examples/send_message.rs"

[[example]]
name = "search"
path = "examples/search.rs"

[[example]]
name = "focus_app"
path = "examples/focus_app.rs"

[dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
